--- a/plugins/styles/style.css
+++ b/plugins/styles/style.css
@@ -1,95 +1,115 @@
-.plugin-chatgpt-faq__button {
-  display: flex;
-  transition-property: opacity;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-  cursor: pointer;
-  width: 2rem;
-  position: absolute;
-  left: -2.5rem;
-  top: 2.5rem;
-  content: url("/images/pencil-faq-icon.svg");
+/** Container */
+.plugin-google-search-console__container {
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px 16px;
 }
 
-.mode-dark .plugin-chatgpt-faq__button:not(.plugin-chatgpt-faq__button--loading) {
-  filter: invert(0.85);
+.plugin-google-search-console__container--loading .plugin-google-search-console__content {
+  display: none;
 }
 
-.plugin-chatgpt-faq__button:hover:not(.plugin-chatgpt-faq__button--loading) {
-  opacity: 50%;
-}
-
-@keyframes plugin-chatgpt-faq__icon--spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.plugin-multilingual-tabs {
-  font-weight: 600;
-  text-transform: uppercase;
-  border-bottom: 1px solid #e5e7eb;
+.plugin-google-search-console__container--loading .plugin-google-search-console__loader-container {
   display: flex;
 }
 
-.plugin-multilingual-tab__item {
-  padding: 16px 28px;
-}
-
-.plugin-multilingual-tab__item:not(:last-child) {
-  margin-right: 8px;
-}
-
-.plugin-multilingual-tab__item.plugin-multilingual-tab__item--selected {
-  color: #0083fc;
-  border-bottom: 3px solid #0083fc;
-}
-
-.plugin-multilingual-tab__item.plugin-multilingual-tab__item--default {
-  order: -1;
-}
-
-.plugin-multilingual-tab__item.plugin-multilingual-tab__item--error {
-  color: #eb5757;
-  border-color: #eb5757;
-}
-
-.plugin-multilingual-translations-warning,
-.plugin-multilingual-remove-ctd-warning__heading {
-  color: #eb5757;
+/** Content */
+.plugin-google-search-console__content {
+  flex-direction: column;
+  gap: 1rem;
   display: flex;
 }
 
-.plugin-multilingual-translations-warning {
-  font-size: 14px;
-  font-weight: 600;
-  border-bottom: 1px solid #eb5757;
-  padding-bottom: 1rem;
+/** loader */
+.plugin-google-search-console__loader {
+  width: 40px;
+  height: 40px;
+  border: 5px solid #ccc;
+  border-top: 5px solid #0083FC;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
 }
 
-.plugin-multilingual-remove-ctd-warning__heading {
-  line-height: 1.25;
-  margin-bottom: 16px;
+.plugin-google-search-console__loader-container {
+  width: 100%;
+  height: 225px;
+  display: none;
+  justify-content: center;
+  align-items: center;
 }
 
-.plugin-multilingual-translations-warning::before,
-.plugin-multilingual-remove-ctd-warning__heading::before {
+/** status */
+.plugin-google-search-console__status--indexed:before {
+  content: url("../images/submited.svg");
+  vertical-align: middle;
+  width: 25px;
+  height: 25px;
   display: inline-block;
-  content: url("/images/exclamation_triangle_red-icon.svg");
-  width: 20px;
-  height: 20px;
-  align-self: start;
-  margin-right: 6px;
-  flex-shrink: 0;
+  margin-right: 10px;
 }
 
-.plugin-multilingual-remove-ctd-warning__heading::before {
-  margin-right: 12px;
+.plugin-google-search-console__status--duplicate:before {
+  content: url("../images/duplicate.svg");
+  vertical-align: middle;
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+  margin-right: 10px;
 }
 
-.plugin-multilingual-remove-ctd-warning__content {
-  white-space: pre-line;
+/** crawl date  */
+.plugin-google-search-console__crawl-date:before {
+  content: url("../images/clock.svg");
+  vertical-align: middle;
+  width: 24px;
+  height: 25px;
+  display: inline-block;
+  margin-right: 10px;
 }
+
+
+/** google search console link */
+.plugin-google-search-console__link {
+  color: #0083FC;
+  text-decoration: underline #0083FC;
+}
+
+.plugin-google-search-console__link:before {
+  content: url("../images/google.svg");
+  vertical-align: middle;
+  width: 24px;
+  height: 25px;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+/** button */
+.plugin-google-search-console__button {
+  border: #0083FC 2px solid;
+  color: #0083FC;
+  border-radius: 8px;
+  padding: 9px 12px;
+  max-width: 200px;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+.plugin-google-search-console__button:hover {
+  background-color: #0083FC;
+  color: white;
+}
+
+.plugin-google-search-console__button:before {
+  content: url("../images/reload.svg");
+  width: 12px;
+  height: 12px;
+  display: inline-block;
+  vertical-align: text-top;
+  margin-right: 10px;
+}
+
+.plugin-google-search-console__button:hover:before{
+  content: url("../images/reload-white.svg")!important;
+}
+
+/** dark mode */
