--- a/plugins/styles/style.css
+++ b/plugins/styles/style.css
@@ -16,8 +16,10 @@
 }
 
 /** Header */
-#plugin-google-search-console-header{
+#plugin-google-search-console-header {
   font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 16px;
 }
 
 /** Content */
