--- a/plugins/templates/template.html
+++ b/plugins/templates/template.html
@@ -1,24 +1,22 @@
+<div id="plugin-google-search-console-header"></div>
 <div class="plugin-google-search-console__content">
-    <h4 id="plugin-google-search-console-header"></h4>
-    <span
-        id="plugin-google-search-console-status"
-    ></span>
-    <span
-        id="plugin-google-search-console-crawl-date"
-        class="plugin-google-search-console__crawl-date"
-    ></span>
-    <a
-        id="plugin-google-search-console-link"
-        class="plugin-google-search-console__link"
-        href="#"
-        target="_blank"
-    ></a>
+  <span id="plugin-google-search-console-status"></span>
+  <span
+    id="plugin-google-search-console-crawl-date"
+    class="plugin-google-search-console__crawl-date"
+  ></span>
+  <a
+    id="plugin-google-search-console-link"
+    class="plugin-google-search-console__link"
+    href="#"
+    target="_blank"
+  ></a>
 
-    <button
-        id="plugin-google-search-console-button"
-        class="plugin-google-search-console__button"
-    ></button>
+  <button
+    id="plugin-google-search-console-button"
+    class="plugin-google-search-console__button"
+  ></button>
 </div>
 <div class="plugin-google-search-console__loader-container">
-    <div class="plugin-google-search-console__loader"></div>
+  <div class="plugin-google-search-console__loader"></div>
 </div>
